[ui] fix cut off of edit dialog on right side

--- a/src/user_interfaces/shared_components/components/graph/GraphView.module.css
+++ b/src/user_interfaces/shared_components/components/graph/GraphView.module.css
@@ -1,8 +1,7 @@
 .container {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 0;
   margin: 0;
 }
